# QtUiDemo

./: CMakeLists.txt  MainPanel.cpp  MainPanel.h  README.md  main.cpp  mainwindow.cpp
AppUi/AppUi/: CMakeLists.txt  MainPanel.cpp  MainPanel.h  Makefile  compile_commands.json  mainwindow.cpp  mainwindow.h  qrc_demo.cpp
AppUi/AppUi/.qt/: QtDeploySupport.cmake
AppUi/AppUi/PreferencePanel/: AccountTab.cpp  AccountTab.h  AdvancedTab.cpp  AdvancedTab.h  ConnectionTab.cpp  ConnectionTab.h  DnsTab.h  FeedbackTab.cpp  FeedbackTab.h  GeneralTab.cpp  PreferencePanel.h
AppUi/AppUi/res/: demo.qrc
AppUi/AppUi/widgets/: SettingsMenu.cpp  SwitchButton.cpp
PreferencePanel/: DnsTab.cpp  GeneralTab.h  PreferencePanel.cpp
widgets/: SettingsMenu.h  SwitchButton.h
